--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,5 @@ Date: 2023-08-22
 Author: Scott Koeneman
 Maintainer: Scott Koeneman <Scott.Koeneman@jefferson.edu>
 Description: Package for performing model selection with standardized information criteria
-License: MIT License
+License: GPL (>= 3)
 RoxygenNote: 7.2.3
