--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ S3method(print,BootGOFTestLM)
 S3method(print,StandICModelSelect)
 export(AICc)
 export(BootGOFTestLM)
+export(FitGLMSubsets)
 export(FitLMSubsets)
 export(StandICModelSelect)
