--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,16 @@ export(BootGOFTestLM)
 export(FitGLMSubsets)
 export(FitLMSubsets)
 export(StandICModelSelect)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,formula)
+importFrom(stats,glm)
+importFrom(stats,lm)
+importFrom(stats,logLik)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,nobs)
+importFrom(stats,quantile)
+importFrom(stats,reformulate)
+importFrom(utils,combn)
