--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,14 @@ Type: Package
 Title: Distribution-Based Model Selection
 Version: 0.1.1
 Date: 2023-08-22
-Author: Scott Koeneman
+Authors@R: person("Scott H.", "Koeneman", 
+                  email = "Scott.Koeneman@jefferson.edu", 
+                  role = c("aut", "cre"))
 Maintainer: Scott Koeneman <Scott.Koeneman@jefferson.edu>
 Description: Perform model selection using distribution and probability-based methods, including standardized AIC, BIC, and AICc.
-License: GPL (>= 3)
+URL: 
+    https://github.com/shkoeneman/DBModelSelect
+License: GPL-3
+Depends: 
+    R (>= 4.1.0)
 RoxygenNote: 7.2.3
