--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,10 @@ Date: 2023-08-22
 Authors@R: person("Scott H.", "Koeneman", 
                   email = "Scott.Koeneman@jefferson.edu", 
                   role = c("aut", "cre"))
-Maintainer: Scott Koeneman <Scott.Koeneman@jefferson.edu>
 Description: Perform model selection using distribution and probability-based methods, including standardized AIC, BIC, and AICc.
 URL: 
     https://github.com/shkoeneman/DBModelSelect
-License: GPL-3
+License: GPL-3 + file LICENSE
 Depends: 
     R (>= 4.1.0)
 RoxygenNote: 7.2.3
