--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(BootGOFTestLM)
 export(FitGLMSubsets)
 export(FitLMSubsets)
 export(StandICModelSelect)
+importFrom(parallel,clusterExport)
+importFrom(parallel,parLapply)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,formula)
