--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DBModelSelect
 Type: Package
 Title: Distribution-Based Model Selection
-Version: 0.1.1
+Version: 0.2.0
 Date: 2023-08-22
 Authors@R: person("Scott H.", "Koeneman", 
                   email = "Scott.Koeneman@jefferson.edu", 
@@ -13,11 +13,12 @@ Description: Perform model selection using distribution and probability-based me
 	procedure for assessing linear regression models is also available. This test relies on
 	theoretical properties of the estimated error variance for a normal linear regression
 	model, and employs a bootstrap procedure to assess the null hypothesis that the fitted
-	model shows no lack of fit. Functionality to perform all subsets linear or generalized
-	linear regression are also available.
+	model shows no lack of fit. For more information, see Koeneman and Cavanaugh (2023)
+	<arXiv: >. Functionality to perform all subsets linear or generalized linear regression
+	is also available.
 URL: 
     https://github.com/shkoeneman/DBModelSelect
-License: GPL-3 + file LICENSE
+License: GPL-3
 Depends: 
     R (>= 4.1.0)
 RoxygenNote: 7.2.3
